tests/highlevel/test-outputs/environment2.out
{'properties': {'a': {'type': 'integer'}, 'b': {'type': 'integer'}}, 'type': 'object'}
{'type': 'integer'}
<Silk: 13 >
KeyError: 'Unknown language: go'

# Specifications and default settings for supported languages
{
  "python": {
    "extension": "py",
    "mode": "interpreted"
  }
  "ipython": {
    "extension": "ipy",
    "mode": "interpreted"
  }


/*
The following C header has been auto-generated from the transformer schema
It will be used to generate bindings, but it will not be automatically
added to the compiled transformer code.

If your transformer code is written in C/C++, you may do so yourself.
For C, you may need to include "stdint.h" and "stdbool.h".
If your transform() function is written in C++, don't forget to add 'extern "C" '
*/

int transform(int a, int b, int *result);

*** executor ***
Traceback (most recent call last):
  File "/seamless/seamless/core/transformation.py", line 405, in _execute
    result, logs = await self._execute_local(
  File "/seamless/seamless/core/transformation.py", line 571, in _execute_local
    full_module_names = build_all_modules(
  File "/seamless/seamless/core/build_module.py", line 366, in build_all_modules
    mod = build_module(
  File "/seamless/seamless/core/build_module.py", line 324, in build_module
    completed_module_definition = complete(module_definition, compilers, languages)
  File "/seamless/seamless/compiler/compile.py", line 140, in complete
    raise ValueError("No compiler defined for compiled language '{}'".format(lang))
ValueError: No compiler defined for compiled language 'go'
*** /executor ***


# Defaults for various compilers
# NOTE: Seamless does not take (the checksum of) a compiler or compiler setting as explicit dependency
# Therefore, Seamless does not re-execute a computation when compiler settings change
# and it is assumed that compiler settings have no impact on reproducibility,
#  i.e. a computation is reproducible or irreproducible no matter the compiler settings
{
  #GNU compiler collection; no "location"; use `which` or implicit shell execution
  "gcc": {
      "mode": "object",   # compiles source files into .o files one by one
                          # alternatives:  
                          # - "archive", that compiles each source file into an .a file
                          # - "package", that compiles *all* source files into a single .a file
      "compile_flag": "-c"
      "output_flag": "-o"
      "options": ["-O3", "-ffast-math", "-march=native", "-fPIC", "-fopenmp"],
      "public_options": ["-fPIC"],
      "debug_options": ["-fPIC", "-g", "-O0", "-fno-inline" , "-Wall"],
      "profile_options": ["-p", "-g"],
  }
  "g++": {

*** executor ***
Traceback (most recent call last):
  File "/seamless/seamless/core/transformation.py", line 405, in _execute
    result, logs = await self._execute_local(
  File "/seamless/seamless/core/transformation.py", line 571, in _execute_local
    full_module_names = build_all_modules(
  File "/seamless/seamless/core/build_module.py", line 366, in build_all_modules
    mod = build_module(
  File "/seamless/seamless/core/build_module.py", line 326, in build_module
    mod = build_compiled_module(
  File "/seamless/seamless/core/build_module.py", line 254, in build_compiled_module
    raise BuildModuleError(stderr)
seamless.core.build_module.BuildModuleError: 
go build  -buildmode=c-archive -o /tmp/seamless-extensions/seamless_module_4f8253ac01040ccc3a7c50000771cc349728a45d75ae16755695299f1320b325_module/_PACKAGE__1.a /tmp/seamless-extensions/seamless_module_4f8253ac01040ccc3a7c50000771cc349728a45d75ae16755695299f1320b325_module/main.go
******************** ERROR ********************
# command-line-arguments
In file included from _cgo_export.c:4:
cgo-gcc-export-header-prolog:43:12: error: conflicting types for 'transform'; have 'int(int,  int)'
In file included from _cgo_export.c:4:
main.go:5:5: note: previous declaration of 'transform' with type 'int(int,  int,  int *)'
_cgo_export.c:24:5: error: conflicting types for 'transform'; have 'int(int,  int)'
   24 | int transform(int a, int b)
      |     ^~~~~~~~~
In file included from _cgo_export.c:4:
main.go:5:5: note: previous declaration of 'transform' with type 'int(int,  int,  int *)'

******************** /ERROR ********************
*** /executor ***


OK

go build  -buildmode=c-archive -o /tmp/seamless-extensions/seamless_module_440b52f2ecd1db16f4fc8d3dfa4450a25803e0986e681359cca398a10b3dac32_module/_PACKAGE__1.a /tmp/seamless-extensions/seamless_module_440b52f2ecd1db16f4fc8d3dfa4450a25803e0986e681359cca398a10b3dac32_module/main.go


None
<Silk: 2029 >
<Silk: 2096 >
